# dynamic-dns

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
deployment/: docker-compose.dev.yaml  docker-compose.yaml
deployment/service/: Chart.yaml  values.yaml
deployment/service/templates/: deployment.yaml  service.yaml  serviceaccount.yaml
src/: app_error.rs  main.rs
src/clients/: Cargo.toml
src/clients/src/: exponential_backoff.rs  lib.rs
src/clients/src/cloudflare/: error.rs  mod.rs  types.rs
src/clients/src/ipify/: mod.rs
src/config/: Cargo.toml
src/config/src/: dns_providers.rs  lib.rs
src/services/: Cargo.toml
src/services/src/: dns_record.rs  error.rs  lib.rs
