[package]
name = "dynamic-dns"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
config = { path = "src/config" }
clients = { path = "src/clients" }
services = { path = "src/services" }

serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "macros",
]}

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1