[package]
name = "config"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "config"
path = "src/lib.rs"

[dependencies]
# Core
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter", "tracing-log"] }
tracing = { version = "0.1.40", features = ["attributes"] }

# Logging
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.122"
dotenvy = "0.15.7"
